--- a/baitapf1/hinh3.html
+++ b/baitapf1/hinh3.html
@@ -1,6 +1,13 @@
 
+<!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-</body>
+   <head>
+     <meta charset="utf-8">  
+     <title>Tiêu đề của trang web</title>
+   </head>
+   <body>
+       <h1>Đây là phần đầu của trang web</h1>
+   <p>Nội dung của trang web</p>
+   </body>
 </html>
+     
