--- a/Baitapf2/hinh2.html
+++ b/Baitapf2/hinh2.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+   <head>
+     <meta charset="utf-8">  
+     <title>Tiêu đề của trang web</title>
+   </head>
+   <body>
+      <font face="Arial" size="3" color="red">Đây là văn bản</font>
+   </body>
+</html>
+     
 
