--- a/Baitapf2/hinh3.html
+++ b/Baitapf2/hinh3.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html>
+   <head>
+     <meta charset="utf-8">  
+     <title>Tiêu đề của trang web</title>
+   </head>
+   <body>
+       <p>Văn bản được <strong>in đậm</strong></p>
+       <p>Văn bản được <em>in nghiêng</em></p>
+       <p>Văn bản được <u>gạch chân</u></p>
+       <p>H<sup>2</sup>O</p>
+       <p>Văn bản được <strong>in đậm</strong></p>
+   </body>
+</html>
+     
 
