--- a/Baitapf2/hinh2.html
+++ b/Baitapf2/hinh2.html
@@ -2,10 +2,20 @@
 <html>
    <head>
      <meta charset="utf-8">  
-     <title>Tiêu đề của trang web</title>
+     <title>Các thẻ đinhk dạng văm bản</title>
    </head>
    <body>
-      <font face="Arial" size="3" color="red">Đây là văn bản</font>
+      <p>Văn bản được <strong>in đậm</strong></p>
+      <p>Văn bản được<em>in nghiêng</em></p>
+      <p>Văn bản được <u>gạch chân</u></p>
+      <p>x<sup>2</sup> + 2x + 1</p>
+      <p>H<sub>2</sub>O</p>
+      <center>Văn bản được canh giữa</center>
+      <p>Nội dung ở dòng 1.<br>Nội dung này ở dòng 2.</p>
+      <pre> 
+           Văn bản giữ nguyên định dạng 
+           Không cần dùng thẻ &lt;br&gt; để xuống dòng.
+      </pre>   
    </body>
 </html>
      
