--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 
+<!DOCTYPE html>
+<html>
+   <head>
+     <meta charset="utf-8">  
+     <title>Tiêu đề của trang web</title>
+   </head>
+   <body>
+       <h1>Lớp 12a7</h1>
+       <h2>Hoten:</h2>
+       <h3>Bai tập F1</h3>
+       <h4>a href="</h4>
