--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@
        <h1>Lớp 12a7</h1>
        <h2>Hoten:</h2>
        <h3>Bai tập F1</h3>
+       <h4>a href="baitapf1/hinh3.html">hinh3</a></h4>
        <h4>a href="</h4>
