--- a/index.html
+++ b/index.html
@@ -10,4 +10,7 @@
        <h2>Hoten:</h2>
        <h3>Bai tập F1</h3>
        <h4>a href="baitapf1/hinh3.html">hinh3</a></h4>
+       <h4>a href="baitapf1/hinh4.html</h4>
+       <h4>a href="</h4>
+       <h4>a href="</h4>
        <h4>a href="</h4>
