--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        <h4>a href="baitapf1/hinh3.html">hinh3</a></h4>
        <h4>a href="baitapf1/hinh4.html">hinh4</a></h4>
        <h4>a href="baitapf1/hinh5.html">hinh5</a></h4>
-       <h4>a href="</h4>
+       <h4>a href="baitapf1/hinh6.html">hinh6</a></h4>
        <h4>a href="</h4>
        <h4>a href="</h4>
        <h4>a href="</h4>
