--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
        <h1>Lớp 12a7</h1>
        <h2>Hoten:</h2>
        <h3>Bai tập F1</h3>
-       <h4>a href="baitapf1/hinh3.html">hinh3</a></h4>
-       <h4>a href="baitapf1/hinh4.html">hinh4</a></h4>
-       <h4>a href="baitapf1/hinh5.html">hinh5</a></h4>
-       <h4>a href="baitapf1/hinh6.html">hinh6</a></h4>
-       <h4>a href="</h4>
-       <h4>a href="</h4>
-       <h4>a href="</h4>
+       <h4><a href="baitapf1/hinh3.html">hinh3</a></h4>
+       <h4><a href="baitapf1/hinh4.html">hinh4</a></h4>
+       <h4><a href="baitapf1/hinh5.html">hinh5</a></h4>
+       <h4><a href="baitapf1/hinh6.html">hinh6</a></h4>
+       <h4><a href="baitapf1/hinh7.html">hinh7</a></h4>
+   </body>
+</html> 
