--- a/Baitapf2/hinh4.html
+++ b/Baitapf2/hinh4.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html>
+   <head>
+     <meta charset="utf-8">  
+     <title>Tiêu đề của trang web</title>
+   </head>
+   <body>
+       <p>Văn bản được <strong>in đậm</strong></p>
+       <p>Văn bản được <em>in nghiêng</em></p>
+       <p>Văn bản được <u>gạch chân</u></p>
+       <p>H<sup>2</sup>O</p>
+     
+    <center>Văn bản được canh ở giữa</center>
+     <p>Nội dung ở dòng 1.<br>Nội dung này ở dòng 2.</p>
+     <pre>
+          Văn bản giưc nguyên định dạng
+          Không cần dùng thẻ &lt;br&gt; để xuống dòng.
+    </pre> 
+   </body>
+</html>
+     
